--- a/Fanpage/aboutrihanna.html
+++ b/Fanpage/aboutrihanna.html
@@ -4,16 +4,28 @@
   <meta charset="utf-8">
 <title> About </title>
 <link rel="stylesheet" href="about.css">
+<link href="https://fonts.googleapis.com/css?family=PT+Sans|Quicksand" rel="stylesheet">
 </head>
 <html lang="en" dir="ltr" >
 <body background="FE84B0"></body>
 <h1> Robyn Rihanna Fenty </h1>
   <ul>
-  <li> Date of Birth: February 20th, 1988, Saint Michael Parish, Barbados</li>
-  <li> Occupations: Singer, songwriter, actress, business woman, Ambassador of Barbados </li>
+  <li> Date of Birth: February 20th, 1988</li>
+  <li> Occupations: Singer, songwriter, actress, businesswoman, Ambassador
+    of Barbados </li>
   <li> Height: 5'8" </li>
   <li> Net Worth: $260 Million</li>
 
 
 
   </ul>
+<p> Rihanna was born in and grew up in Saint Michael Parish, Barbados. At a young age she showed a strong interest in
+  singing and becoming an artist. When she was only 15, she met a music producer
+  who saw her talent and introduced her to the world. Today, she is more than
+  just a Grammy (and other) award winning singer/songwriter. She is a businesswoman running
+  fashion and makeup lines, such as Fenty Beauty and Savage X Fenty. She has
+  starred in multiple movies and was even chosen to become the Ambassador of
+  Barbados in 2018. Robyn Rihanna Fenty is an iconic woman who continues to
+  bring her talent to multiple fields. </p>
+  <img src="studio.jpg" alt="studio">
+  </html>
