--- a/Fanpage/albums.html
+++ b/Fanpage/albums.html
@@ -1,13 +1,199 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="albums.css">
+  <body background= gray.jpg>
   <img src="mots.png" alt="r1">
-  <img src="aglm.png" alt="r2">
-  <img src="gggb.png" alt="r3">
-  <img src="rr.png" alt="r4">
-  <img src="loud.png" alt="r5">
-  <img src="rtt2.jpg" alt="r6">
-  <img src="unaplgtc.png" alt="r7">
-  <img src="anti.png" alt="r8">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans|Quicksand" rel="stylesheet">
 </head>
+<body>
+  <h2> Music of the Sun (2005)</h2>
+  <p>
+1. Pon De Replay
+2. Here I Go Again
+3. If It's Lovin' That You Want
+4. You Don't Love Me (No, No, No)
+5. That La, La, La
+6. The Last Time
+7. Willing to Wait
+8. Music of the Sun
+9. Let Me
+10. Rush
+11. There's a Thug In My Life
+12. Now I Know
+13. Pon de Replay (Remix) </p>
+  <img src="aglm.png" alt="r2">
+  <h2> A Girl Like Me (2006)</h2>
+  <p> 1.
+SOS
+2.
+Kisses Don't Lie
+3.
+Unfaithful
+4.
+We Ride
+5.
+Dem Haters
+6.
+Final Goodbye
+7.
+Break It Off
+8.
+Crazy Little Thing Called Love
+9.
+Selfish Girl
+10.
+P.S. (I'm Still Not Over You)
+11.
+A Girl Like Me
+12.
+A Million Miles Away
+13.
+If It's Lovin' That You Want, Pt. 2
+14.
+Who Ya Gonna Run To?
+15.
+Pon de Replay (Full Phatt Remix)
+16.
+Coulda Been the One
+ </p>
+  <img src="gggb.png" alt="r3">
+  <h2> Good Girl Gone Bad (2007) </h2>
+  <p> 1.
+Umbrella
+2.
+Push Up on Me
+3.
+Don't Stop the Music
+4.
+Breakin' Dishes
+5.
+Shut Up and Drive
+6.
+Hate That I Love You
+7.
+Say It
+8.
+Sell Me Candy
+9.
+Lemme Get That
+10.
+Rehab
+11.
+Question Existing
+12.
+Good Girl Gone Bad
+13.
+Cry
+14.
+Haunted
+</p>
+  <img src="rr.png" alt="r4">
+  <h2> Rated R (2009) </h2>
+  <p> 1.
+Mad House
+2.
+Wait Your Turn
+3.
+Hard
+4.
+Stupid In Love
+5.
+ROCKSTAR 101
+6.
+Russian Roulette
+7.
+Fire Bomb
+8.
+Rude Boy
+9.
+Photographs
+10.
+G4L
+11.
+Te Amo
+12.
+Cold Case Love
+13.
+The Last Song
+14.
+Hole In My Head
+</p>
+  <img src="loud.png" alt="r5">
+  <h2> Loud (2010) </h2>
+  <p> 1.
+S&M
+2.
+What's My Name?
+3.
+Cheers (Drink to That)
+4.
+Fading
+5.
+Only Girl (In the World)
+6.
+California King Bed
+7.
+Man Down
+8.
+Raining Men
+9.
+Complicated
+10.
+Skin
+11.
+Love the Way You Lie, Pt. II
+</p>
+  <img src="rtt2.jpg" alt="r6">
+  <h2> Talk That Talk (2011) </h2>
+  <p>1. You da One
+2. Where Have You Been
+3. We Found Love
+4. Talk That Talk
+5. Cockiness (Love It)
+6. Birthday Cake
+7. We All Want Love
+8. Drunk On Love
+9. Roc Me Out
+10. Watch N Learn
+11. Farewell
+12. Red Lipstick
+13. Do Ya Thang
+14. Fool In Love </p>
+  <img src="unaplgtc.png" alt="r7">
+  <h2> Unapologetic (2012) </h2>
+  <p> 1. Phresh Out the Runway
+2. Diamonds
+3. Numb
+4. Pour It Up
+5. Loveeeeee Song feat. Future
+6. Jump
+7. Right Now
+8. What Now
+9. Stay
+10. Nobody's Business
+11. Love Without Tragedy / Mother Mary
+12. Get It Over With
+13. No Love Allowed
+14. Lost In Paradise
+</p>
+  <img src="anti.png" alt="r8">
+  <h2> Anti (2016) </h2>
+  <p> 1. Consideration ft. SZA
+2. James Joint
+3. Kiss It Better
+4. Work ft. Drake
+5. Desperado
+6. Woo ft. Travis Scott
+7. Needed Me
+8. Yeah, I Said It
+9. Same Ol' Mistakes
+10. Never Ending
+11. Love on the Brain
+12. Higher
+13. Close to You
+14. Goodnight Gotham
+15. Pose
+16. Sex with Me
+</p>
+</body>
 </html>
