--- a/Fanpage/Rihanna.html
+++ b/Fanpage/Rihanna.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" >
-<body background="rihannafp.jpg">
+<body background="rbackg.jpg">
 </body>
 <head>
   <meta charset="utf-8">
 <title> Rihanna Fanpage </title>
 <link rel="stylesheet" href="master.css">
+<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +18,6 @@
   <ul>
     <li><a href="aboutrihanna.html">About</a></li>
     <li><a href="albums.html">Albums</a></li>
-    <li><a href="fentycorp.html">Fenty Corp</a></li>
     <li><a href="photos.html">Photos</a></li>
     <li><a href="videos.html">Videos</a></li>
   </ul>
