--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="https://use.typekit.net/jis0pww.css">
+    <title>Aziza</title>
   </head>
-  <body>
-    <a href="Rihanna">Rihanna</a>
-    <a href="project2">project 2</a>
-    <a href="project3">project 3</a>
+  <body background="calm.jpg">
+    <h1 class="head">Aziza Wako</h1>
+  <div class="one">  <a href="Rihanna.html">Fanpage</a></div>
+<div class="two" <a href="p2.html">Project 2</a></div>
+<div class "three">    <a href="project3">Project 3</a></div>
 
   </body>
 </html>
