--- a/Fanpage/aboutrihanna.html
+++ b/Fanpage/aboutrihanna.html
@@ -9,12 +9,14 @@
 <html lang="en" dir="ltr" >
 <body background="FE84B0"></body>
 <h1> Robyn Rihanna Fenty </h1>
+<div class="two">
   <ul>
   <li> Date of Birth: February 20th, 1988</li>
   <li> Occupations: Singer, songwriter, actress, businesswoman, Ambassador
     of Barbados </li>
   <li> Height: 5'8" </li>
   <li> Net Worth: $260 Million</li>
+</div>
 
 
 
