--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
         <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="https://use.typekit.net/jis0pww.css">
+  <link rel="stylesheet" href="https://use.typekit.net/jis0pww.css">
     <title>Aziza</title>
   </head>
   <body background="calm.jpg">
     <h1 class="head">Aziza Wako</h1>
-  <div class="one">  <a href="Rihanna.html">Fanpage</a></div>
-<div class="two" <a href="p2.html">Project 2</a></div>
-<div class "three">    <a href="project3">Project 3</a></div>
+  <div class="one"><a href="fanpage/Rihanna.html">Fanpage</a></div>
+<div class="two"> <a href="p2.html">Project 2</a></div>
+<div class="three"><a href="project3.html">Project 3</a></div>
+<div class="four"><a href="weeklies.html">Weeklies</a></div>
 
   </body>
 </html>
